@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
-#define DATE_STR "13.08.2012"
-#define TIME_STR "22:42:16"
-#define SUB_VERS 1043-Mike
-#define SVN_VERS "ersky9x-r99"
+#define DATE_STR "22.08.2012"
+#define TIME_STR "18:13:57"
+#define SUB_VERS 1061-Mike
+#define SVN_VERS "ersky9x-r100"
 #define MOD_VERS "REVB"
